--- a/com.wso2telco.dep.hub.paymentapi/com.wso2telco.dep.hub.paymentapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.paymentapi/com.wso2telco.dep.hub.paymentapi.capp/pom.xml
@@ -14,23 +14,104 @@
   <name>com.wso2telco.dep.hub.paymentapi.capp</name>
   <description>com.wso2telco.dep.hub.paymentapi.capp</description>
   <properties>
-    <com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence>
-    <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
-    <com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.charge.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.charge.Sequence>
-    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence>
-    <com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.token.endpoint.call.error.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.token.endpoint.call.error.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.token.endpoint.call.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.token.endpoint.call.Sequence>
+    <com.wso2telco.dep.hub.endpoint_._com.wso2telco.dep.hub.paymentapi.token.pool.Endpoint>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.endpoint_._com.wso2telco.dep.hub.paymentapi.token.pool.Endpoint>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.user.info.call.error.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.user.info.call.error.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.cache.lookup.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.cache.lookup.Sequence>
+    <com.wso2telco.dep.hub.endpoint_._com.wso2telco.dep.hub.paymentapi.user.info.Endpoint>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.endpoint_._com.wso2telco.dep.hub.paymentapi.user.info.Endpoint>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.operator.config.reader.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.operator.config.reader.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.charge.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.charge.Sequence>
-    <com.wso2telco.dep.hub.api_._paymentAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._paymentAPI>
-    <com.wso2telco.dep.hub.paymentapi.synapse.api_._paymentAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.api_._paymentAPI>
-    <com.wso2telco.dep.hub.resource_._operatorConfig>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._operatorConfig>
-    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.filter.check.limit.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.filter.check.limit.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.cache.update.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.cache.update.Sequence>
     <com.wso2telco.dep.hub.resource_._userInfoConfig>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._userInfoConfig>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence>
+    <com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.charge.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.charge.Sequence>
+    <com.wso2telco.dep.hub.paymentapi.synapse.api_._paymentAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.api_._paymentAPI>
+    <com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.check.limit.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.check.limit.Sequence>
+    <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
+    <com.wso2telco.dep.hub.resource_._spendLimit>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._spendLimit>
+    <com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.sequence_._com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.package.type.set.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.package.type.set.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.default.package.type.set.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.default.package.type.set.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.user.info.call.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.user.info.call.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.check.limit.error.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.check.limit.error.Sequence>
+    <com.wso2telco.dep.hub.api_._paymentAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._paymentAPI>
+    <com.wso2telco.dep.hub.resource_._operatorConfig>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._operatorConfig>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.resource</groupId>
+      <artifactId>operatorConfig</artifactId>
+      <version>1.0.0</version>
+      <type>zip</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.resource</groupId>
+      <artifactId>userInfoConfig</artifactId>
+      <version>1.0.0</version>
+      <type>zip</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.resource</groupId>
+      <artifactId>spendLimit</artifactId>
+      <version>1.0.0</version>
+      <type>zip</type>
+    </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.api</groupId>
       <artifactId>paymentAPI</artifactId>
       <version>3.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.endpoint</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.token.pool.Endpoint</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.endpoint</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.user.info.Endpoint</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.cache.lookup.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.cache.update.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.check.limit.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.check.limit.error.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.default.package.type.set.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.filter.check.limit.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
     <dependency>
@@ -52,16 +133,40 @@
       <type>xml</type>
     </dependency>
     <dependency>
-      <groupId>com.wso2telco.dep.hub.resource</groupId>
-      <artifactId>operatorConfig</artifactId>
-      <version>1.0.0</version>
-      <type>zip</type>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.operator.config.reader.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
     </dependency>
     <dependency>
-      <groupId>com.wso2telco.dep.hub.resource</groupId>
-      <artifactId>userInfoConfig</artifactId>
-      <version>1.0.0</version>
-      <type>zip</type>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.package.type.set.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.token.endpoint.call.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.token.endpoint.call.error.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.user.info.call.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.paymentapi.user.info.call.error.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
     </dependency>
   </dependencies>
   <repositories>
