--- a/com.wso2telco.dep.hub.smsmessagingapi/com.wso2telco.dep.hub.smsmessagingapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.smsmessagingapi/com.wso2telco.dep.hub.smsmessagingapi.capp/pom.xml
@@ -16,10 +16,13 @@
   <properties>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.outbound.subscriptions.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.outbound.subscriptions.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.outbound.subscriptions.splitter.fault.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.outbound.subscriptions.splitter.fault.Sequence>
-    <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.splitter.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.splitter.Sequence>
+    <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,wso2/gadget=dar,synapse/api=xml,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
+    <com.wso2telco.dep.hub.endpoint_._com.wso2telco.dep.hub.smsmessagingapi.dummy.Endpoint>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.endpoint_._com.wso2telco.dep.hub.smsmessagingapi.dummy.Endpoint>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.subscriptions.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.subscriptions.Sequence>
     <com.wso2telco.dep.hub.endpoint_._com.wso2telco.dep.hub.smsmessagingapi.dummy.Endpoint>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.endpoint_._com.wso2telco.dep.hub.smsmessagingapi.dummy.Endpoint>
     <com.wso2telco.dep.hub.api_._smsmessagingAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._smsmessagingAPI>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.gather.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.gather.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.subscriptions.gather.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.subscriptions.gather.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.outbound.notification.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.outbound.notification.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.subscriptions.splitter.fault.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.subscriptions.splitter.fault.Sequence>
@@ -27,6 +30,7 @@
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.stop.outbound.subscriptions.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.stop.outbound.subscriptions.Sequence>
     <com.wso2telco.dep.hub.resource_._smsmessagingConfig>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._smsmessagingConfig>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.splitter.fault.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.splitter.fault.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.subscriptions.splitter.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.subscriptions.splitter.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.stop.inbound.subscriptions.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.stop.inbound.subscriptions.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.outbound.subscriptions.gather.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.smsmessagingapi.handle.outbound.subscriptions.gather.Sequence>
@@ -120,6 +124,24 @@
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.gather.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.splitter.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.smsmessagingapi.handle.inbound.registrations.splitter.fault.Sequence</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
