--- a/com.wso2telco.dep.hub.creditapi/com.wso2telco.dep.hub.creditapi.synapse/pom.xml
+++ b/com.wso2telco.dep.hub.creditapi/com.wso2telco.dep.hub.creditapi.synapse/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>com.wso2telco.dep.hub</groupId>
     <artifactId>com.wso2telco.dep.hub.creditapi</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-rc4</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.creditapi.synapse</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-rc4</version>
   <packaging>pom</packaging>
   <name>com.wso2telco.dep.hub.creditapi.synapse</name>
   <description>com.wso2telco.dep.hub.creditapi.synapse</description>
