--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>mediation-dep-hub</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.1.0-rc1</version>
   <packaging>pom</packaging>
   <name>mediation-dep-hub</name>
   <description>mediation-dep-hub</description>
