--- a/com.wso2telco.dep.hub.provisionapi/pom.xml
+++ b/com.wso2telco.dep.hub.provisionapi/pom.xml
@@ -5,10 +5,10 @@
   <parent>
     <groupId>com.wso2telco.dep.hub</groupId>
     <artifactId>mediation-dep-hub</artifactId>
-    <version>2.1.0-rc2</version>
+    <version>2.1.0-SNAPSHOT</version>
   </parent>
   <artifactId>com.wso2telco.dep.hub.provisionapi</artifactId>
-  <version>2.1.0-rc2</version>
+  <version>2.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>com.wso2telco.dep.hub.provisionapi</name>
   <description>com.wso2telco.dep.hub.provisionapi</description>
