--- a/com.wso2telco.dep.hub.ussdapi/com.wso2telco.dep.hub.ussdapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.ussdapi/com.wso2telco.dep.hub.ussdapi.capp/pom.xml
@@ -15,17 +15,18 @@
   <description>com.wso2telco.dep.hub.ussdapi.capp</description>
   <properties>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.ni.mt.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.ni.mt.Sequence>
-    <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,wso2/gadget=dar,synapse/api=xml,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
+    <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.inbound.notification.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.inbound.notification.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.unsubscribe.notification.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.unsubscribe.notification.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.Sequence>
     <com.wso2telco.dep.hub.endpoint_._com.wso2telco.dep.hub.ussdapi.dummy.Endpoint>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.endpoint_._com.wso2telco.dep.hub.ussdapi.dummy.Endpoint>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.unsubscribe.notification.gather.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.unsubscribe.notification.gather.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.fault.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.fault.Sequence>
     <com.wso2telco.dep.hub.api_._ussdAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._ussdAPI>
     <com.wso2telco.dep.hub.resource_._ussdConfig>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._ussdConfig>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.ni.mt.validation.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.ni.mt.validation.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.gather.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.gather.Sequence>
-    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.unsubscribe.notification.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.unsubscribe.notification.Sequence>
   </properties>
   <dependencies>
     <dependency>
@@ -85,6 +86,12 @@
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.ussdapi.resource.mo.unsubscribe.notification.Sequence</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.mo.unsubscribe.notification.gather.Sequence</artifactId>
       <version>3.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
