--- a/com.wso2telco.dep.hub.ussdapi/com.wso2telco.dep.hub.ussdapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.ussdapi/com.wso2telco.dep.hub.ussdapi.capp/pom.xml
@@ -24,44 +24,15 @@
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.fault.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.fault.Sequence>
     <com.wso2telco.dep.hub.api_._ussdAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._ussdAPI>
     <com.wso2telco.dep.hub.resource_._ussdConfig>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._ussdConfig>
-    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.ni.mt.validation.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.ni.mt.validation.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.inbound.notification.validation.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.inbound.notification.validation.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.gather.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.gather.Sequence>
   </properties>
   <dependencies>
     <dependency>
       <groupId>com.wso2telco.dep.hub.api</groupId>
       <artifactId>ussdAPI</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
-      <type>xml</type>
-    </dependency>
-    <dependency>
-      <groupId>com.wso2telco.dep.hub.sequence</groupId>
-      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.ni.mt.Sequence</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
-      <type>xml</type>
-    </dependency>
-    <dependency>
-      <groupId>com.wso2telco.dep.hub.sequence</groupId>
-      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.ni.mt.validation.Sequence</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
-      <type>xml</type>
-    </dependency>
-    <dependency>
-      <groupId>com.wso2telco.dep.hub.sequence</groupId>
-      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.Sequence</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
-      <type>xml</type>
-    </dependency>
-    <dependency>
-      <groupId>com.wso2telco.dep.hub.sequence</groupId>
-      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.inbound.notification.Sequence</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
-      <type>xml</type>
-    </dependency>
-    <dependency>
-      <groupId>com.wso2telco.dep.hub.sequence</groupId>
-      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.Sequence</artifactId>
       <version>3.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
@@ -73,7 +44,31 @@
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.inbound.notification.Sequence</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.inbound.notification.validation.Sequence</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.Sequence</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.gather.Sequence</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.mo.subscribe.notification.splitter.Sequence</artifactId>
       <version>3.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
@@ -92,6 +87,18 @@
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.ussdapi.resource.mo.unsubscribe.notification.gather.Sequence</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.ni.mt.Sequence</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.ussdapi.resource.ni.mt.validation.Sequence</artifactId>
       <version>3.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
