--- a/com.wso2telco.dep.hub.customerinfoapi/pom.xml
+++ b/com.wso2telco.dep.hub.customerinfoapi/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.wso2telco.dep.hub</groupId>
     <artifactId>mediation-dep-hub</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.1.0-rc6</version>
   </parent>
   <artifactId>com.wso2telco.dep.hub.customerinfoapi</artifactId>
   <packaging>pom</packaging>
